Fix: page alignment

--- a/0-feedback_form/abiodun_feedback_form/subscribe.css
+++ b/0-feedback_form/abiodun_feedback_form/subscribe.css
@@ -56,8 +56,8 @@ body {
 }
 
 .social-media img {
-	height: 40px;
-	width: 40px;
+	height: 60px;
+	width: 60px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -85,8 +85,8 @@ body {
 	}
 	
 	.social-media img {
-		height: 30px;
-		width: 30px;
+		height: 45px;
+		width: 45px;
 	}
 }
 
@@ -115,7 +115,7 @@ body {
 	}
 	
 	.social-media img {
-		height: 25px;
-		width: 25px;
+		height: 35px;
+		width: 35px;
 	}
 }
